deploy: 4092650cc42206d58a4b5c608dc74974cc363164

--- a/genindex.html
+++ b/genindex.html
@@ -268,7 +268,19 @@
 </li>
       </ul></li>
       <li><a href="bitbot.services.html#bitbot.services.bittrex.BitTrex.get_candles">get_candles() (bitbot.services.bittrex.BitTrex method)</a>
+
+      <ul>
+        <li><a href="bitbot.services.html#bitbot.services.service.ServiceInterface.get_candles">(bitbot.services.service.ServiceInterface method)</a>
 </li>
+      </ul></li>
+      <li><a href="bitbot.services.html#bitbot.services.bittrex.BitTrex.get_history_data">get_history_data() (bitbot.services.bittrex.BitTrex method)</a>
+
+      <ul>
+        <li><a href="bitbot.services.html#bitbot.services.service.ServiceInterface.get_history_data">(bitbot.services.service.ServiceInterface method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="bitbot.services.html#bitbot.services.bittrex.BitTrex.get_market">get_market() (bitbot.services.bittrex.BitTrex method)</a>
 </li>
       <li><a href="bitbot.services.html#bitbot.services.bittrex.BitTrex.get_market_mean">get_market_mean() (bitbot.services.bittrex.BitTrex method)</a>
@@ -277,8 +289,6 @@
         <li><a href="bitbot.services.html#bitbot.services.service.ServiceInterface.get_market_mean">(bitbot.services.service.ServiceInterface method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="bitbot.services.html#bitbot.services.bittrex.BitTrex.get_market_percentage">get_market_percentage() (bitbot.services.bittrex.BitTrex method)</a>
 
       <ul>
@@ -397,6 +407,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="bitbot.services.html#bitbot.services.service.TimeInForce.POST_ONLY_GOOD_TIL_CANCELLED">POST_ONLY_GOOD_TIL_CANCELLED (bitbot.services.service.TimeInForce attribute)</a>
+</li>
+      <li><a href="bitbot.services.html#bitbot.services.service.printProgressBar">printProgressBar() (in module bitbot.services.service)</a>
 </li>
   </ul></td>
 </tr></table>
