deploy: c40c7b174464ce6ae2986af1911c247c6e890bf2

--- a/genindex.html
+++ b/genindex.html
@@ -264,18 +264,10 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="bitbot.services.html#bitbot.services.bittrex.BitTrex.get_market">get_market() (bitbot.services.bittrex.BitTrex method)</a>
 </li>
-      <li><a href="bitbot.services.html#bitbot.services.bittrex.BitTrex.get_market_mean">get_market_mean() (bitbot.services.bittrex.BitTrex method)</a>
-
-      <ul>
-        <li><a href="bitbot.services.html#bitbot.services.service.ServiceInterface.get_market_mean">(bitbot.services.service.ServiceInterface method)</a>
+      <li><a href="bitbot.services.html#bitbot.services.service.ServiceInterface.get_market_mean">get_market_mean() (bitbot.services.service.ServiceInterface method)</a>
 </li>
-      </ul></li>
-      <li><a href="bitbot.services.html#bitbot.services.bittrex.BitTrex.get_market_percentage">get_market_percentage() (bitbot.services.bittrex.BitTrex method)</a>
-
-      <ul>
-        <li><a href="bitbot.services.html#bitbot.services.service.ServiceInterface.get_market_percentage">(bitbot.services.service.ServiceInterface method)</a>
+      <li><a href="bitbot.services.html#bitbot.services.service.ServiceInterface.get_market_percentage">get_market_percentage() (bitbot.services.service.ServiceInterface method)</a>
 </li>
-      </ul></li>
       <li><a href="bitbot.services.html#bitbot.services.bittrex.BitTrex.get_market_summary">get_market_summary() (bitbot.services.bittrex.BitTrex method)</a>
 </li>
       <li><a href="bitbot.services.html#bitbot.services.bittrex.BitTrex.get_market_ticker">get_market_ticker() (bitbot.services.bittrex.BitTrex method)</a>
